# Online_Shop

./: LICENCE  Makefile  README.md  pyproject.toml
apps/account/: admin.py  models.py
apps/accounts/: admin.py  backends.py  managers.py  models.py  tests.py  urls.py  views.py
apps/accounts/urls/: __init__.py  authentication.py
apps/order/: models.py  tests.py
apps/shop/: admin.py  models.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
public/: urls.py  utils.py  views.py
storage/static/ajax/: login.html
templates/: coming-soon.html
templates/accounts/: authentication.html  login.html  verify-opt.html
templates/base/: base.html
templates/base/components/: footer.html  head-references.html  header.html  js-plugins.html  mobile-menu.html  newsletter-popup.html  quick-view.html  scroll-top.html  sticky-footer.html
templates/public/: 404.html  500.html  about-us.html  coming-soon.html  contact-us.html  index.html
templates/shop/: index.html  product-detail.html
