[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["mr-hosseinaskarii <mr.hosseinaskarii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
python-decouple = "^3.8"
django-split-settings = "^1.3.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
